editing project listing pages

--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -14,13 +14,13 @@
                     <h2>Filter By Project Type</h2>
                     <ul class="categories">
                         {% for type in projecttype_list %}
-                            <li class="half box square project-type">{{ type.alternate_title }}</li>
+                            <li class="square project-type">{{ type.alternate_title }}</li>
                         {% endfor %}
                     </ul>
                      <h2>Filter By Landscape Type</h2>
                      <ul class="categories">
                         {% for type in landscapetype_list %}
-                            <li class="half box square landscape-type">{{ type.alternate_title }}</li>
+                            <li class="square landscape-type">{{ type.alternate_title }}</li>
                         {% endfor %}
                     </ul>
                     <h2>Sort By Date</h2>
