editing project listing pages

--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -15,8 +15,8 @@
                     <ul class="categories">
                         {% for type in projecttype_list %}
                             <li class="square">
-                                <a href="{% url portfolio_projects_by_type category.slug %}" title="{{ category.name }}" class="project-type square center">
-                                    {{ category.alternate_title }}
+                                <a href="{% url portfolio_projects_by_type type.slug %}" title="{{ type.name }}" class="project-type square center">
+                                    {{ type.alternate_title }}
                                 </a>
                             </li>
                         {% endfor %}
@@ -25,8 +25,8 @@
                      <ul class="categories">
                         {% for type in landscapetype_list %}
                             <li class="square">
-                                <a href="{% url portfolio_projects_by_landscape category.slug %}" title="{{ category.name }}" class="landscape-type square center">
-                                    {{ category.alternate_title }}
+                                <a href="{% url portfolio_projects_by_landscape type.slug %}" title="{{ type.name }}" class="landscape-type square center">
+                                    {{ type.alternate_title }}
                                 </a>
                             </li>
                         {% endfor %}
