editing project listing pages

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -27,8 +27,10 @@
                 <ul>
                    {% for image in project.projectimage_set.all %}
                         <li class="box">
+                            <div class="image">
                             <a href="#"><img src="{{ image.thumbnail.url }}" alt="{{ image.caption }}"/></a>
-                       </li>
+                            </div>
+                        </li>
                    {% endfor %}
                 </ul>
             </div>
