editing project listing pages

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -50,10 +50,13 @@ table {
 a,
 a:link,
 a:active,
-a:hover,
 a:visited {
     /*color: #6699ff;*/
     color:#3d6e31;
+}
+
+a:hover {
+    color:#8ec42a;
 }
 
 html {
