editing project listing pages

--- a/futuregreen/templates/content/contentblock/image_aside.html
+++ b/futuregreen/templates/content/contentblock/image_aside.html
@@ -1,5 +1,5 @@
-<article>
+<article class="box">
 {% if object.image %}
-<img src="{{ object.aside.url }}" />
+<img class="flex" src="{{ object.aside.url }}" />
 {% endif %}
 </article>
