--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -11,7 +11,7 @@
                     {% endif %}
             {%  endfor %}
         {%  endfor %}
-    <h1 style="margin-top:-1em; color:#fff;">Philosophy</h1>
+    <h1 style="font-size:2.4em; line-height:1em; margin:-1em 0 0 10px; color:#fff;">Philosophy</h1>
         {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/body.html" %}
     </article>
 </section>
