--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -11,13 +11,13 @@
                     {% endif %}
             {%  endfor %}
         {%  endfor %}
-    <h1 style="font-size:2.4em; line-height:1em; margin:-1em 0 0 10px; color:#fff;">Philosophy</h1>
+    <h1 style="font-size:2.4em; line-height:1em; margin:-1em 0 0 10px; color:#fff;">Studio</h1>
         {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/body.html" %}
     </article>
 </section>
 <section class="third">
     {%  gblock "people_image" for "content.ContentBlock" with "content/contentblock/image_aside.html" %}
-    <h1>People</h1>
+    <h1 style="font-size:2.4em; line-height:1em; margin:-1em 0 0 20px; color:#fff;">People</h1>
     {% for employee in principal_list %}
         <article class="quarter box">
             <a href="#"><img title="{{ employee.name }}"
