--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -17,7 +17,9 @@
 </section>
 <section class="third">
     {%  gblock "people_image" for "content.ContentBlock" with "content/contentblock/image_aside.html" %}
-    <h1 style="font-size:2.4em; line-height:1em; margin:-1em 0 0 20px; color:#fff;">People</h1>
+    <header class="box">
+        <h1 style="font-size:2.4em; line-height:1em; margin:-1em 0 0 10px; color:#fff;">People</h1>
+    </header>
     {% for employee in principal_list %}
         <article class="quarter box">
             <a href="#"><img title="{{ employee.name }}"
