editing project listing pages

--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -18,7 +18,7 @@
 <section class="third">
     {%  gblock "people_image" for "content.ContentBlock" with "content/contentblock/image_aside.html" %}
     <header class="box">
-        <h1 style="font-size:2.4em; line-height:1em; margin:-1em 0 0 10px; color:#fff;">People</h1>
+        <h1 style="padding: 0 0 0 0; font-size:2.4em; line-height:1em; margin:-1em 0 0 10px; color:#fff;">People</h1>
     </header>
     {% for employee in principal_list %}
         <article class="quarter box">
