--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -48,13 +48,13 @@
 <section class="third">
     <article class="box" id="news">
         <div>
-        <h1>News</h1>
         {% for image in news.itemimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ news.get_absolute_url }}">
                             <img class="flex" alt="{{ news.title }}" src="{{ image.aside.url }}" /></a>
                     {% endif %}
         {%  endfor %}
+        <h1 style="padding: 0 0 0 0; font-size:2.4em; line-height:1em; margin:-1em 0 0 10px; color:#fff;">News</h1>
         <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
         <h2>{{ news.title }}</h2>
         {{ news.excerpt_html|safe }}
