editing project listing pages

--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -54,7 +54,7 @@
                             <img class="flex" alt="{{ news.title }}" src="{{ image.aside.url }}" /></a>
                     {% endif %}
         {%  endfor %}
-        <h1 style="padding: 0 0 0 0; font-size:2.4em; line-height:1em; margin:-1em 0 0 10px; color:#fff;">News</h1>
+        <h1 style="padding: 0 0 0 0; font-size:2.4em; line-height:1em; margin:-.98em 0 0 10px; color:#fff;">News</h1>
         <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
         <h2>{{ news.title }}</h2>
         {{ news.excerpt_html|safe }}
