editing project listing pages

--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -4,14 +4,14 @@
 <section class="two-thirds">
     <article class="box">
         {%  gblock "studio_image" for "content.ContentBlock" with "content/contentblock/image.html" %}
-        <h1 style="font-size:2.4em; line-height:1em; margin:-1em 0 0 10px; color:#fff;">Studio</h1>
+        <h1 style="font-size:2.4em; line-height:1em; margin:-.95em 0 0 10px; color:#fff;">Studio</h1>
         {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/body.html" %}
     </article>
 </section>
 <section class="third">
     <header class="box">
         {%  gblock "people_image" for "content.ContentBlock" with "content/contentblock/image_aside.html" %}
-        <h1 style="padding: 0 0 0 0; font-size:2.4em; line-height:1em; margin:-1em 0 0 10px; color:#fff;">People</h1>
+        <h1 style="padding: 0 0 0 0; font-size:2.4em; line-height:1em; margin:-.97em 0 0 10px; color:#fff;">People</h1>
     </header>
     {% for employee in principal_list %}
         <article class="quarter box">
