--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -58,9 +58,9 @@
         <h1><a href="{% url home %}">Future Green Studio</a></h1>
         <nav>
             <ul>
-                <li><a href="{% url studio %}">Studio</a></li>
-                <li><a href="{% url portfolio_project_list %}">Portfolio</a></li>
-                <li><a href="#">Research</a></li>
+                <li><a class="studio" href="{% url studio %}">Studio</a></li>
+                <li><a class="portfolio" href="{% url portfolio_project_list %}">Portfolio</a></li>
+                <li><a class="research" href="#">Research</a></li>
             </ul>
         </nav>
     </header>
