--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -150,7 +150,9 @@ body > header > nav li a:active {
     color:#444;
 }
 
-body#studio > header > nav li a.studio {
+body#studio > header > nav li a.studio,
+body#portfolio > header > nav li a.portfolio,
+body#studio > header > nav li a.research {
      background:url('images/vertical-bg.png') no-repeat 10px top,
                url('images/bottom-bg.png') no-repeat left 10px,
                url('images/corner-bg-bottom-right.png') no-repeat right bottom;
