--- a/futuregreen/templates/portfolio/portfolio_base.html
+++ b/futuregreen/templates/portfolio/portfolio_base.html
@@ -1,2 +1,3 @@
 {% extends "base.html" %}
 {% block section_title %}: Portfolio{% endblock section_title %}
+{% block body_id %}portfolio{% endblock body_id %}
