--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -302,7 +302,7 @@ h1.overlay {
 }
 
 #home article#profile div {
-    /*background:url('images/profile_bg.png') no-repeat 10px top;*/
+    background:url('images/profile_bg.png') no-repeat 10px top;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -o-box-sizing: border-box;
@@ -330,10 +330,10 @@ h1.overlay {
 
 #home article#profile h2 {
     font-family: purista-web-1,purista-web-2, sans-serif;
-    font-size:1.71428em;
+    font-size:2.14285em;
     text-transform: uppercase;
     padding:10px 0;
-    color:#888;
+    color:#8ec42a;
 }
 
 #home article.text h1 {
