editing site nav styles

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -332,7 +332,7 @@ h1.overlay {
     font-family: purista-web-1,purista-web-2, sans-serif;
     font-size:2em;
     text-transform: uppercase;
-    padding:10px 10px 15px 10px;
+    padding:15px 10px;
     color:#3d6e31;
 }
 
