--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -14,7 +14,7 @@
 </section>
 <section class="third">
     <header class="box">
-        <a href="{% url studio_people %}"
+        <a href="{% url studio_people %}">
         {%  gblock "people_image" for "content.ContentBlock" with "content/contentblock/image_aside.html" %}
         </a>
         <h1 class="overlay">People</h1>
@@ -54,6 +54,7 @@
 <section class="third">
     <article class="box" id="news">
         <div>
+        <a href="{% url news_list %}">
         {% for image in news.itemimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ news.get_absolute_url }}">
@@ -61,6 +62,7 @@
                     {% endif %}
         {%  endfor %}
         <h1 class="overlay">News</h1>
+        </a>
         <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
         <h2>{{ news.title }}</h2>
         {{ news.excerpt_html|safe }}
