editing site nav styles

--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -14,7 +14,7 @@
 </section>
 <section class="third">
     <header class="box">
-        <a href="{% url studio_people %}">
+        <a href="">
         {%  gblock "people_image" for "content.ContentBlock" with "content/contentblock/image_aside.html" %}
         </a>
         <h1 class="overlay">People</h1>
