--- a/futuregreen/templates/news/item_detail.html
+++ b/futuregreen/templates/news/item_detail.html
@@ -6,9 +6,9 @@
         {% for image in item.itemimage_set.all %}
            <img class="flex" alt="{{ item.title }}" src="{{ image.main.url }}" />
         {%  endfor %}
-        <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
-        <h2>{{ news.title }}</h2>
-        {{ news.body_html|safe }}
+        <p class="date">{{ item.date_published|date:"M d, Y" }}</p>
+        <h2>{{ item.title }}</h2>
+        {{ item.body_html|safe }}
     </article>
 </section>
 {% endblock content %}
