editing site nav styles

--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -61,6 +61,7 @@
                 <li><a class="studio" href="{% url studio %}">Studio</a></li>
                 <li><a class="portfolio" href="{% url portfolio_project_list %}">Portfolio</a></li>
                 <li><a class="research" href="#">Research</a></li>
+                <li><a class="contact" href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
