--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -108,7 +108,7 @@ body > header {
 
 body > header > h1 {
     font-size:8px;
-    width:50%;
+    width:33.33333%;
     overflow: hidden;
     float:left;
 }
@@ -124,7 +124,7 @@ body > header > h1 a {
 
 body > header > nav {
     float:left;
-    width:50%;
+    width:66.66667%;
 }
 
 body > header > nav li {
@@ -152,7 +152,8 @@ body > header > nav li a:active {
 
 body#studio > header > nav li a.studio,
 body#portfolio > header > nav li a.portfolio,
-body#research > header > nav li a.research {
+body#research > header > nav li a.research,
+body#contact > header > nav li a.contact {
      background:url('images/vertical-bg.png') no-repeat 10px top,
                url('images/bottom-bg.png') no-repeat left 10px,
                url('images/corner-bg-bottom-right.png') no-repeat right bottom;
