--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -815,7 +815,7 @@ h1.overlay {
     float:left;
     width:41.66667%;
     margin:0;
-    background:url('images/corner-bg-top-right.png') no-repeat right top;
+    /*background:url('images/corner-bg-top-right.png') no-repeat right top;*/
 
 }
 
