--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -297,9 +297,7 @@ h1.overlay {
 }
 
 #home article#profile {
-    background:url('images/vertical-bg.png') no-repeat 10px top,
-               url('images/bottom-bg.png') no-repeat left 10px,
-               url('images/corner-bg-bottom-right.png') no-repeat right bottom;
+    background: url('images/corner-bg-bottom-right.png') no-repeat right bottom;
 }
 
 #home article#profile div {
