--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -297,7 +297,8 @@ h1.overlay {
 }
 
 #home article#profile {
-    background: url('images/corner-bg-bottom-right.png') no-repeat right bottom;
+    background: url('images/corner-bg-bottom-right.png') no-repeat right bottom,
+                url('images/corner-bg-top-right.png') no-repeat right top;
 }
 
 #home article#profile div {
