--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -221,6 +221,10 @@ body > footer > .contact {
     width:66.66667%; float:left;
 }
 
+.three-quarters {
+    width:75%%; float:left;
+}
+
 .five-sixths {
     width:83.33333%; float:left;
 }
