adding employee list to aside

--- a/futuregreen/templates/people/employee_detail.html
+++ b/futuregreen/templates/people/employee_detail.html
@@ -13,7 +13,7 @@
         </section>
     </article>
 </section>
-<aside>
+<aside class="third">
     {% for employee in employee_list %}
         <img class="flex quarter box" alt="{{ employee.name }}" src="{{ employee.list.url }}" />
     {% endfor %}
