adding employee list to aside

--- a/futuregreen/templates/people/employee_detail.html
+++ b/futuregreen/templates/people/employee_detail.html
@@ -14,6 +14,7 @@
     </article>
 </section>
 <aside class="third">
+    <h1>The Team</h1>
     {% for employee in employee_list %}
         <article class="quarter box">
             <a href="{{ employee.get_absolute_url }}"><img title="{{ employee.name }}"
