--- a/futuregreen/templates/people/employee_detail.html
+++ b/futuregreen/templates/people/employee_detail.html
@@ -14,7 +14,7 @@
     </article>
 </section>
 <aside class="third">
-    <h1 class="box">Futuregreen Team</h1>
+    <h1 class="box">Future Green Team</h1>
     {% for employee in employee_list %}
         <article class="quarter box">
             <a href="{{ employee.get_absolute_url }}"><img title="{{ employee.name }}"
