adding employee list to aside

--- a/futuregreen/templates/people/employee_detail.html
+++ b/futuregreen/templates/people/employee_detail.html
@@ -4,7 +4,7 @@
 <section class="two-thirds">
     <article>
         <section class="quarter box">
-            <img class="flex" alt="{{ employee.name }}" src="{{ employee.list.url }}" />
+            <img class="flex" style="border: 1px solid #efefef" alt="{{ employee.name }}" src="{{ employee.list.url }}" />
         </section>
         <section class="three-quarters box">
             <h1>{{ employee.name }}</h1>
