--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -108,7 +108,7 @@ body > header {
 
 body > header > h1 {
     font-size:8px;
-    width:50%;
+    width:66.66667%;
     overflow: hidden;
     float:left;
 }
@@ -124,14 +124,14 @@ body > header > h1 a {
 
 body > header > nav {
     float:left;
-    width:50%;
+    width:33.33333%;
 }
 
 body > header > nav li {
     float:left;
     line-height:80px;
     text-align: center;
-    width:33.33333%;
+    width:25%;
 }
 
 body > header > nav li a {
@@ -222,7 +222,7 @@ body > footer > .contact {
 }
 
 .three-quarters {
-    width:75%%; float:left;
+    width:75%; float:left;
 }
 
 .five-sixths {
