--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -125,6 +125,7 @@ body > header > h1 a {
 body > header > nav {
     float:left;
     width:50%;
+    padding-right:10px;
 }
 
 body > header > nav li {
