--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -463,6 +463,7 @@ h1.overlay {
     overflow: hidden;
     float:left;
     width:25%;
+    padding:5px 5px 0 0;
     margin:0;
     color:#fff;
     font-weight: bold;
