editing site nav styles

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -920,7 +920,7 @@ h1.overlay {
                url('images/bottom-bg.png') no-repeat left 10px;
 }
 
-ul.project-nav {
+ul#project-nav {
     position:absolute;
     bottom:0;
 }
