editing site nav styles

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -123,7 +123,7 @@
                     </div>
                 {% endif %}
                 </div>
-                <ul id="project-nav">
+                <ul id="project-nav" class="square">
                 {%  if project.get_next_project %}
                 <li class="box"><h2>Next Project</h2>
                     <a class="next-proj tease"
