--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -470,7 +470,7 @@ h1.overlay {
     overflow: hidden;
     float:left;
     width:25%;
-    padding:0 4px 4px 0;
+    padding:4px 4px 0 0;
     margin:0;
     color:#fff;
     font-weight: bold;
