--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1000,6 +1000,12 @@ ul#project-nav {
     margin-bottom:20px;
 }
 
+#studio .content {
+    background:url('images/vertical-bg.png') no-repeat 10px top,
+               url('images/bottom-bg.png') no-repeat left 10px,
+               url('images/corner-bg-bottom-right.png') no-repeat right bottom;
+}
+
 @media screen and (max-width: 1240px) and (min-width: 1120px) {
     body {
         width:90%;
