--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1001,9 +1001,8 @@ ul#project-nav {
 }
 
 #studio .content {
-    background:url('images/vertical-bg.png') no-repeat 10px top,
-               url('images/bottom-bg.png') no-repeat left 10px,
-               url('images/corner-bg-bottom-right.png') no-repeat right bottom;
+    background:url('images/corner-bg-bottom-right.png') no-repeat right bottom,
+               url('images/corner-bg-top-right.png') no-repeat right top;
 }
 
 @media screen and (max-width: 1240px) and (min-width: 1120px) {
