--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -60,7 +60,7 @@
             <ul>
                 <li><a class="studio" href="{% url studio %}">Studio</a></li>
                 <li><a class="portfolio" href="{% url portfolio_project_list %}">Portfolio</a></li>
-                <li><a class="research" href="#">Research</a></li>
+                <li><a class="research" href="{% url research %}">Research</a></li>
                 <li><a class="contact" href="#">Contact</a></li>
             </ul>
         </nav>
