--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -2,14 +2,8 @@
 {% load generic_flatblocks %}
 {% block content %}
 <section class="two-thirds">
-    <header class="box">
-
-        {%  gblock "studio_image" for "content.ContentBlock" with "content/contentblock/image.html" %}
-        <h1 class="overlay">Studio</h1>
-
-    </header>
     <article class="box">
-        {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/body.html" %}
+        {%  gblock "firm_profile" for "content.ContentBlock" %}
     </article>
 </section>
 <section class="third">
