editing site nav styles

--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <section class="two-thirds">
     <article class="box">
-        {%  gblock "firm_profile" for "content.ContentBlock" %}
+        {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/image_header.html" %}
     </article>
 </section>
 <section class="third">
