editing site nav styles

--- a/futuregreen/templates/content/contentblock/image_header.html
+++ b/futuregreen/templates/content/contentblock/image_header.html
@@ -1,6 +1,6 @@
 <header>
     {% if object.image %}
-        <img class="flex" src="{{ object.image.url }}" />
+        <img class="flex" src="{{ object.main.url }}" />
     {% endif %}
     {% if object.title %}
     <h1 class="overlay">{{ object.title }}</h1>
